brain/sources/prod-metadata/objects/Deliverable_Result__c/Deliverable_Result__c.object-meta.xml
<CustomObject>
    <label>Deliverable Result</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Deliverable Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliverable Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>