brain/sources/prod-metadata/objects/Deliverable_Result__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <label>Deliverable</label>
    <referenceTo>Deliverable__c</referenceTo>
    <relationshipLabel>Deliverable Results</relationshipLabel>
    <relationshipName>Deliverable_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>