brain/sources/prod-metadata/objects/Deliverable_Result__c/fields/Deliverable_Path__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Path__c</fullName>
    <label>Deliverable Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>