brain/sources/prod-metadata/objects/Deliverable_Result__c/fields/Result_Status__c.field-meta.xml
<CustomField>
    <fullName>Result_Status__c</fullName>
    <label>Result Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>