brain/sources/prod-metadata/objects/Deliverable_Result__c/fields/Threshold_Score__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Score__c</fullName>
    <label>Threshold Score</label>
    <length>20</length>
    <type>Text</type>
</CustomField>